--- a/css/styles.css
+++ b/css/styles.css
@@ -641,7 +641,7 @@ address {
   align-items: center;
 
   font-weight: 500;
-  font-size: 16px;
+
   line-height: 1.5;
   letter-spacing: 0.04em;
   text-align: center;
@@ -652,9 +652,170 @@ address {
   border-radius: 4px;
   border-color: transparent;
   border-width: 0;
+
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-subscribe__icon {
   fill: var(--white);
   margin-left: 16px;
+}
+
+.form-subscribe__btn:hover,
+.form-subscribe__btn:focus {
+  background-color: var(--ocean);
+}
+
+/* backdpor */
+
+.is-open {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--navy-blue-modal);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  padding: 0 24px;
+  background-color: var(--dairy);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  background-color: var(--cornflower);
+  cursor: pointer;
+  border: none;
+  fill: var(--navy-blue);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:active {
+  background-color: var(--ocean);
+  fill: var(--white);
+}
+
+.modal__title {
+  margin: 72px 0 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--navy-blue);
+}
+
+.input-container {
+  position: relative;
+}
+
+.modal-form__label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.modal-form__input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  padding-left: 38px;
+  border: 1px solid var(--navy-blue-modal);
+  margin-bottom: 8px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__input:focus,
+.modal-form__comment:focus {
+  outline: transparent;
+  border-color: #4d5ae5;
+}
+
+.modal-form__icon {
+  position: absolute;
+  top: 14px;
+  left: 16px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form__input:focus + .modal-form__icon {
+  fill: var(--iris);
+}
+
+.modal-form__comment {
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  border: 1px solid var(--navy-blue-modal);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 16px;
+}
+
+.modal-form__comment::placeholder {
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: var(--navy-blue-modal);
+}
+
+.modal-form__icon-box {
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: var(--white);
+  margin-right: 8px;
+  
+}
+
+.modal-form__label--appere {
+  margin: 0;
+}
+
+.modal-form__link {
+  color: var(--iris);
+  text-decoration: underline;
+  cursor: pointer;
+  
+}
+
+.input-container--flex {
+  display: inline-flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.modal-form__checkbox:checked + .modal-form__icon-box {
+  fill: #31d0aa;
+  
+}
+
+.btn-send {
+  display: block;
+  margin: 0 auto;
 }
