--- a/css/styles.css
+++ b/css/styles.css
@@ -670,13 +670,22 @@ address {
 
 /* backdpor */
 
-.is-open {
+.backdrop {
   position: fixed;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
-  background-color: var(--navy-blue-modal);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  position: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-open {
+opacity: 1;
+visibility: visible;
+pointer-events: auto;
 }
 
 .modal {
@@ -708,7 +717,7 @@ address {
   cursor: pointer;
   border: none;
   fill: var(--navy-blue);
-
+  border: 1px solid var(--navy-blue-modal);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -754,7 +763,7 @@ address {
 .modal-form__input:focus,
 .modal-form__comment:focus {
   outline: transparent;
-  border-color: #4d5ae5;
+  border-color: var(--iris);
 }
 
 .modal-form__icon {
@@ -776,6 +785,7 @@ address {
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-bottom: 16px;
+  resize: none;
 }
 
 .modal-form__comment::placeholder {
@@ -786,11 +796,7 @@ address {
 }
 
 .modal-form__icon-box {
-  border-radius: 2px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  fill: var(--white);
-  margin-right: 8px;
-  
+  fill: var(--cloud);
 }
 
 .modal-form__label--appere {
@@ -801,7 +807,6 @@ address {
   color: var(--iris);
   text-decoration: underline;
   cursor: pointer;
-  
 }
 
 .input-container--flex {
@@ -810,12 +815,27 @@ address {
   margin-bottom: 24px;
 }
 
-.modal-form__checkbox:checked + .modal-form__icon-box {
-  fill: #31d0aa;
-  
+.review-form-own-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid var(--navy-blue-modal);
+  cursor: pointer;
+  margin-right: 8px;
+  background-color: var(--cloud);
 }
 
-.btn-send {
-  display: block;
-  margin: 0 auto;
+.modal-form__checkbox:checked
+  + .modal-form__label--appere
+  .review-form-own-checkbox {
+  background-color: var(--ocean);
+}
+
+.modal-form__checkbox:focus
+  + .modal-form__label--appere
+  .review-form-own-checkbox {
+  outline: 1px solid var(--iris);
 }
