--- a/css/styles.css
+++ b/css/styles.css
@@ -616,17 +616,26 @@ address {
   color: var(--white);
 }
 
+.form-subscribe {
+  display: flex;
+  gap: 24px;
+}
+
+.form-subscribe__label {
+}
+
 .form-subscribe__input {
   width: 264px;
   height: 40px;
-
-  margin-right: 24px;
+  padding-left: 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
   border: 1px solid var(--white);
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
-
-  padding: 8px 16px;
+  color: var(--white);
 }
 
 .form-subscribe__input::placeholder {
@@ -638,16 +647,17 @@ address {
 
 .form-subscribe__btn {
   display: inline-flex;
+  justify-content: center;
   align-items: center;
-
+  min-width: 165px;
   font-weight: 500;
-
+  height: 40px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
   padding: 8px 24px 8px 24px;
-
+  border: none;
   background-color: var(--iris);
   border-radius: 4px;
   border-color: transparent;
@@ -680,12 +690,13 @@ address {
   opacity: 0;
   visibility: hidden;
   position: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-open {
-opacity: 1;
-visibility: visible;
-pointer-events: auto;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .modal {
