part of modal-form

--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,7 @@ address {
   letter-spacing: 0.04em;
   text-align: center;
   color: #fff;
-  
+
   border: none;
   background-color: var(--iris);
   border-radius: 4px;
@@ -705,12 +705,13 @@ address {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   border-radius: 4px;
-  padding: 0 24px;
+  padding: 72px 24px 24px 24px;
   background-color: var(--dairy);
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn {
@@ -728,9 +729,20 @@ address {
   cursor: pointer;
   border: none;
   fill: var(--navy-blue);
-  border: 1px solid var(--navy-blue-modal);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn__icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  background-color: var(--ocean);
+  border: none;
+  fill: var(--white);
 }
 
 .close-btn:active {
@@ -739,12 +751,16 @@ address {
 }
 
 .modal__title {
-  margin: 72px 0 16px;
+  margin-bottom: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
   color: var(--navy-blue);
+}
+
+.label-container {
+  margin-bottom: 8px;
 }
 
 .input-container {
@@ -755,7 +771,7 @@ address {
   display: block;
   margin-bottom: 4px;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
@@ -764,6 +780,8 @@ address {
   display: block;
   width: 100%;
   height: 40px;
+  background-color: transparent;
+  outline: transparent;
   border-radius: 4px;
   padding-left: 38px;
   border: 1px solid var(--navy-blue-modal);
@@ -771,16 +789,15 @@ address {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form__input:focus,
-.modal-form__comment:focus {
-  outline: transparent;
+.modal-form__input:focus {
   border-color: var(--iris);
 }
 
 .modal-form__icon {
   position: absolute;
-  top: 14px;
+  top: 50%;
   left: 16px;
+  transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -788,23 +805,35 @@ address {
   fill: var(--iris);
 }
 
+.textarea-container {
+  margin-bottom: 16px;
+}
+
+
+
+
 .modal-form__comment {
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--navy-blue-modal);
   padding: 8px 16px;
   border: 1px solid var(--navy-blue-modal);
   border-radius: 4px;
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-bottom: 16px;
+  
   resize: none;
 }
 
-.modal-form__comment::placeholder {
-  font-size: 12px;
-  line-height: 1.16667;
-  letter-spacing: 0.04em;
-  color: var(--navy-blue-modal);
+.modal-form__comment:focus {
+  border-color: var(--iris);
 }
+
+
 
 .modal-form__icon-box {
   fill: var(--cloud);
